# feluda

./: .codespellignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.monitoring.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
benchmarks/: test_autonomic.py  test_crypto.py  test_hardware.py  test_performance.py  test_resilience.py
config/: feluda.yml  operators.yml  plugins.yml
docs/source/: advanced_features.rst  api.rst  architecture.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  operators.rst  quickstart.rst
docs/source/getting_started/: deployment.rst
examples/: advanced_features_demo.py
examples/plugins/: sample_plugin.py
feluda/: __init__.py  base_operator.py  exceptions.py
feluda/agents/: __init__.py  agent.py  communication.py  learning.py  swarm.py
feluda/ai_agents/: __init__.py  agent_swarm.py  qa_agent.py
feluda/api/: __init__.py  app.py
feluda/autonomic/: __init__.py  ml_tuning.py  self_healing.py
feluda/cli/: __init__.py  main.py
feluda/config/: __init__.py  config.py  providers.py  validators.py
feluda/crypto/: __init__.py  homomorphic.py  secure_multiparty.py  zero_knowledge.py  zkp.py
feluda/dashboard/: __init__.py  app.py
feluda/data_pipeline/: __init__.py  connectors.py  pipeline.py  processors.py  transformers.py
feluda/deployment/: __init__.py  manager.py  monitoring.py  scaling.py  serving.py
feluda/distributed/: __init__.py  backend.py  broker.py  cluster.py  scheduler.py  worker.py
feluda/docs/: __init__.py  generator.py  parser.py  renderer.py  server.py
feluda/experiment_tracking/: __init__.py  artifacts.py  metrics.py  storage.py  tracking.py
feluda/feature_store/: __init__.py  storage.py  store.py  transformers.py
feluda/hardware/: __init__.py  asic.py  fpga.py  neuromorphic.py  quantum.py
feluda/model_registry/: __init__.py  metadata.py  registry.py  storage.py
feluda/models/: __init__.py  data_models.py
feluda/monitoring/: __init__.py  alerts.py  health.py  metrics.py
feluda/notifications/: __init__.py  channels.py  notifications.py  subscriptions.py  templates.py
feluda/observability/: __init__.py  logging.py  metrics.py  tracing.py
feluda/performance/: __init__.py  hardware_acceleration.py  numba_optimizations.py
feluda/plugins/: __init__.py  manager.py  plugin.py
feluda/resilience/: __init__.py  circuit_breaker.py
feluda/security/: __init__.py  audit.py  auth.py  authorization.py  encryption.py
feluda/testing/: __init__.py  chaos.py  fuzzing.py  metamorphic.py
feluda/validation/: __init__.py  drift.py  quality.py  schema.py  validators.py
feluda/verification/: __init__.py  formal_verification.py  vector_operations.py
feluda/workflow/: __init__.py  engine.py  executor.py  operators.py  scheduler.py  storage.py
monitoring/prometheus/: prometheus.yml
operators/image_vec_rep_resnet/: image_vec_rep_resnet_v2.py
operators/text_sentiment_analysis/: __init__.py  test.py  text_sentiment_analysis.py
scripts/: discover_plugins.py  feluda  feluda-api  feluda-dashboard  run_benchmarks.py  setup_dependencies.py  verify_operators.py  verify_vector_operations.py
tests/: test_autonomic.py  test_hardware.py  test_testing.py
tests/feluda_unit_tests/: test_base_operator.py  test_circuit_breaker.py  test_image_vec_rep_resnet_v2.py  test_observability.py  test_vector_operations.py
tests/test_ai_agents/: test_agent_swarm.py  test_qa_agent.py
tests/test_config/: test_config.py
tests/test_plugins/: test_plugins.py
tests/test_verification/: test_formal_verification.py
